--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,127 @@
 /* @css for vistara home
 */
+select[multiple], select[size] {
+    height: 20px!important;
+}
+.location-icon{background-position: 96% 46% !important;background-size: 16px !important;}
+/*  #fav_show span::before {
+    content:"\f0dc";
+    font-family: FontAwesome;
+    color: #000;
+    padding: 12px 8px;
+    position: absolute; right: 0; top: 0;
+    background: red;
+    z-index: 1;
+    text-align: center;
+    width: 10%;
+    height: 100%;      
+    pointer-events: none;
+    box-sizing: border-box;   
+} */
+/*  .select-editable .trip_input {
+    background: #eeeeee;
+    border: 0px;
+    border-radius: 0px;
+    box-shadow: 0px 0px 0px #fff;
+    width: 100% !important;
+    display: block !important;
+    position: relative;
+}
+.select-editable .form-control {
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+} */
+ 
+#div2 {
+    display:none; 
+}
+/* Checkin Validation css */
+.content-wrapper .vistara-deals {
+    padding-top: 74px !important;
+}
+form .error {
+  /* color: #ff0000; */
+}
+input.error{border-bottom: 3px solid #f61e37!important;}
+label.error {
+   color: #f61e37;
+}
+/* End Checkin Validation css*/
+.triptabs-menu {
+	height: auto;
+    float: right;
+    /* clear: both; */
+}
+
+.triptabs-menu li {
+	width:95px;
+    height: 30px;
+    line-height: 30px;
+    float: left;
+    /* margin-right: 10px; */
+    /* background-color: #ccc; */
+    border: 2px solid #999999;
+	list-style-type: none;
+}
+
+
+
+.triptabs-menu li.active-link {
+    position: relative;
+    background-color: #fff;
+    /* border-bottom: 1px solid #fff; */
+	border: 2px solid #b89555;
+    z-index: 5;
+}
+.round-trip-border{border-right: 1px solid #b89555!important;}
+.one-way-border{border-left: 1px solid #b89555!important;}
+.triptabs-menu li a {
+    padding: 10px;
+   /*  text-transform: uppercase; */
+    color: #999999;
+    text-decoration: none; 
+}
+
+.triptabs-menu .active-link a {
+    color: #b89555!important;
+	font-weight: bold;
+}
+
+.tabs-contents2 {    
+    background-color: #fff;
+    float: left;   
+    width: auto;
+}
+
+.triptab-content {
+    width: 100%
+    padding: 20px;
+    display: none;
+}
+
+#triptab-1 {
+ display: block;   
+} 
+.one-way-return{opacity: 0.2!important;}
+
+input[disabled] {
+    cursor: default!important;
+}
+
 /* Date Picker css */
 .btncls{
     background-color:#B80C4D;
@@ -1205,6 +1327,7 @@ button:focus{
 }
 .content-wrapper .vistara-deals {
 	padding: 54px 0;
+	/* margin-top: 20px; */
 }
 .content-wrapper .vistara-deals .deals-list {
 	list-style-type: none;
@@ -1238,7 +1361,16 @@ button:focus{
 	font-weight: 300;
 	font-family: 'Open Sans';
 }
+#deals_list li{cursor: pointer;}
+.club-vistara-list li p{	
+	 cursor: pointer; 
+}
+#vistara_experience_list li p{cursor: pointer;}
+#deals_and_offers ul li p{cursor: pointer;}
 
+.destinations .left-grid .list li p{	
+	/* cursor: default; */
+}
 .deals-tab .left-grid .list li:hover {
 	color: #b89550;
 	font-weight: 300;
